--- a/components/about-us/aboutHero/aboutHero.module.scss
+++ b/components/about-us/aboutHero/aboutHero.module.scss
@@ -1,6 +1,6 @@
 .about_hero_container{
     margin-top: 4.5rem;
-    margin-bottom: 5rem;
+    margin-bottom: 6rem;
     @media (max-width: 800px) {
         margin-top: 3rem;
     }
@@ -56,5 +56,14 @@
     
     svg {
         color: var(--white);
+    }
+    @media (max-width: 600px) {
+        .icon{
+            width: 60px;
+            height: 60px;
+        }
+        svg{
+            width: 30px;
+        }
     }
 }
