--- a/components/about-us/weLiveHere/weLiveHere.module.scss
+++ b/components/about-us/weLiveHere/weLiveHere.module.scss
@@ -12,8 +12,8 @@
 
 .maps{
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
     // @media (max-width: 800px) {
     //     grid-template-columns: 1fr;
     // }
@@ -21,14 +21,19 @@
 .map{
     border: 1px solid var(--color-primary);
     border-radius: 11px;
-    padding: 2rem;
+    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     .map_wrapper{
         width: 100%;
-        height: 300px;
+        height: 220px;
+    }
+}
+@media (max-width: 1100px) {
+    .maps{
+        grid-template-columns: 1fr 1fr;
     }
 }
 @media (max-width: 800px) {
